--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -35,6 +35,29 @@
           </div>
         </div>
       </nav>
+      <div class="row" id="#index-box">
+        <div class="col s12 m4 l2">
+          <!-- <h1>PITCH!</h1> -->
+            <div id="top-categories">
+              <!-- <p>Top Ideas:</p> -->
+                <div class="fixed-action-btn horizontal click-to-toggle">
+                  <a class="btn-floating btn-large black">
+                    <i class="material-icons">menu</i>
+                  </a>
+                  <ul>
+                    <!-- <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki"><i class="material-icons">navigation</i></a></li>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/tech/show"><i class="material-icons">code</i></a></li> -->
+                    <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                    <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                    <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                    <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                    <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                    <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+                  </ul>
+                </div>
+            </div>
+        </div>
       <!-- <div class="page-name">Pitch'd: Style</div> -->
       <div class="style-heading"></div>
       <!-- <div class="col s12"> -->
