--- a/wiki-project/views/wiki/edit.ejs
+++ b/wiki-project/views/wiki/edit.ejs
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div id="edit-box" class="card vertical">
+      <div id="edit-box" class="card panel">
         <div class="col s12 m4 l8">
           <form method="POST" action="/wiki/<%=wiki.id %>?_method=delete">
             <button class="btn-floating btn-large waves-effect waves-light red margin-top-20" style="margin-left:10px;"><i class="material-icons">delete</i></button>
