--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -2,101 +2,76 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <!--Mobile Device Optimization -->
-      <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"/> -->
-      <title>Wiki 2.0</title>
-      <!-- Materialize CSS Links -->
+      <title>Show Page!</title>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="libraries/materialize/css/materialize.min.css" />
-      <!-- App Styles -->
       <link rel="stylesheet" href="/css/style.css" />
-      <!-- jQuery -->
       <script src="/libraries/jquery/jquery.min.js"></script>
-      <!-- Materialize JS -->
+      <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
       <script src="/libraries/materialize/js/materialize.min.js"></script>
-      <!-- Application JS -->
       <script src="/js/app.js"></script>
+      <script src="lib/marked.js"></script>
   </head>
   <body>
-    <div class="show-body">
-
-      <nav>
-        <div class="nav-wrapper">
-          <div class="hide-on-small-only">
+    <nav>
+      <div class="nav-wrapper black"><h1 id="title">Pitch:<%= wiki.category %> Board</h1></div>
+    </nav>
+    <div class="hide-on-small-only">
+      <form>
+        <div class="input-field">
+          <input id="search" type="search" required placeholder="search bar">
+          <label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label>
+          <i id="close-icon" class="material-icons">close</i>
+        </div>
+      </form>
+    </div>
+    <div id="left-column">
           <ul id="dropdown1" class="dropdown-content">
-            <li class="launch-drop-down"><a href="/wiki">launch</a></li>
-            <li><a href="/wiki/style/show">style</a></li>
+            <li><a href="/wiki/tech/show">tech</a></li>
+            <li class="divider"></li>
             <li><a href="/wiki/travel/show">travel</a></li>
+            <li class="divider"></li>
+            <li><a href="/wiki/style/show">style</a></li>
+            <li class="divider"></li>
+            <li><a href="/wiki/food/show">food</a></li>
           </ul>
-            <!-- <a href="#!">Pitch!</a> -->
-          <ul class="right hide-on-med-and-down">
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
-          </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="row" id="#index-box">
-        <div class="col s12 m4 l2">
-          <!-- <h1>PITCH!</h1> -->
-            <div id="top-categories">
-              <!-- <p>Top Ideas:</p> -->
-                <div class="fixed-action-btn horizontal click-to-toggle">
-                  <a class="btn-floating btn-large black">
-                    <i class="material-icons">menu</i>
-                  </a>
-                  <ul>
-                    <!-- <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki"><i class="material-icons">navigation</i></a></li>
-                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/tech/show"><i class="material-icons">code</i></a></li> -->
-                    <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
-                  </ul>
-                </div>
+        <ul class="left hide-on-med-and-down">
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
+        </ul>
+    </div>
+    <div class="col s12 m4 l2">
+      <!-- <h1>PITCH!</h1> -->
+        <div id="top-categories">
+          <!-- <p>Top Ideas:</p> -->
+            <div class="fixed-action-btn horizontal click-to-toggle">
+              <a class="btn-floating btn-large black">
+                <i class="material-icons">menu</i>
+              </a>
+              <ul>
+                <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+              </ul>
             </div>
         </div>
-      <!-- <div class="page-name">Pitch'd: Style</div> -->
-      <div class="style-heading"></div>
-      <!-- <div class="col s12"> -->
-    <div class="row">
-      <!--Below is the column for the left container  -->
-      <!-- <div class="col s12"> -->
-    <!-- <div class="container"> -->
-      <div class="col s12">
-        <div class="top-stories">
+    </div>
+    <div class="col s12 m4 l8">
+      <% wiki.forEach(wiki => { %>
+        <div class="card-panel">
+        <div class="card-content">
+          <p>Title:<%= wiki.title %></p>
         </div>
-        <div class="card">
-      <div class="show-input">
-        <div class="row container">
-           <div class="card-panel">
-          <!-- <%= wiki.category %> -->
-          <% wiki.forEach(wiki => { %>
-            <!--This contains the card title  -->
-            <div class="card-content">
-            <span class="white-text">Title:<%= wiki.title %></span>
-            </div>
-            <div class="date-created"
-              <span class="white-text">Date Created:<%= wiki.date_created %></span>
-            </div>
-            <!--This contains the card content  -->
-            <div class="card-reveal">
-              <!-- <span class="card-title grey-text text-darken-4"> -->
-              <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
-              <span class="card-title grey-text text-darken-4">Content:<%= wiki.content %></span>
-            </div>
-            <% }) %>
-           </div>
-          </div>
+        <div class="date-created">
+          <p>Created At:<%= wiki.date_created %></p>
         </div>
+          <p>Category:<%= wiki.category %></p>
+          <p> Content:<%= wiki.content %></p>
+          <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
+        </div>
+        <% }) %>
       </div>
     </div>
-  </div>
-
-<!-- Below is the ending div for the row -->
-    </div>
-    <div class="style-footer"></div>
   </body>
 </html>
