New Page Updates

--- a/wiki-project/views/wiki/new.ejs
+++ b/wiki-project/views/wiki/new.ejs
@@ -33,6 +33,19 @@
     </div>
       <div class="row" id="new-box">
         <div class="col s12 m4 l8">
+          <div class="fixed-action-btn horizontal click-to-toggle">
+            <a class="btn-floating btn-large black">
+              <i class="material-icons">menu</i>
+            </a>
+            <ul>
+              <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+              <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+              <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+              <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+              <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+              <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+            </ul>
+          </div>
           <header>
             <h2>NEW POST:</h2>
           </header>
