--- a/wiki-project/views/wiki/edit.ejs
+++ b/wiki-project/views/wiki/edit.ejs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
       <script src="/libraries/materialize/js/materialize.min.js"></script>
       <script src="/js/app.js"></script>
-      <script src="lib/marked.js"></script>
+      <script src="libraries/marked.min.js"></script>
   </head>
   <body>
     <nav>
