--- a/wiki-project/views/wiki/edit.ejs
+++ b/wiki-project/views/wiki/edit.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper black"><h1 id="title">Edit/Delete Page</h1></div>
+      <div class="nav-wrapper black"><h1 id="title">Edit/Delete</h1></div>
     </nav>
     <div class="hide-on-small-only">
     <div>
@@ -41,11 +41,11 @@
             </a>
             <ul>
               <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
-              <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+              <li><a class="btn-floating teal lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
               <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
-              <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+              <li><a class="btn-floating teal lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
               <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
-              <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+              <li><a class="btn-floating teal lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
             </ul>
           </div>
         </div>
@@ -53,7 +53,7 @@
       <div id="edit-box">
         <div class="col s12 m4 l8">
           <form method="POST" action="/wiki/<%=wiki.id %>?_method=delete">
-            <button class="btn-floating btn-large waves-effect waves-light red margin-top-20" style="margin-left:10px;"><i class="material-icons">delete</i></button>
+            <button class="btn-floating btn-large waves-effect waves-light teal lighten-3 margin-top-20" style="margin-left:10px;"><i class="material-icons">delete</i></button>
           </form>
           <form method="POST" action="/wiki/<%= wiki.id %>?_method=put">
                 <div class="input-field col s12">
@@ -71,7 +71,7 @@
                </div>
             </div>
             <div id="the-edit-button" class="card-action">
-              <button id="submit-edit-button" class="btn black" href="wiki">Submit Edit!</button>
+              <button id="submit-edit-button" class="btn teal black" href="wiki">Submit Edit!</button>
             </div>
         </div>
       </div>
