--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -17,7 +17,7 @@
       <div class="nav-wrapper black"><h1 id="title">Pitch: Idea Board</h1></div>
     </nav>
     <div class="hide-on-small-only">
-      <form>
+      <form action="" id="search-form">
         <div class="input-field">
           <input id="search" type="search" required placeholder="search bar">
           <label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -49,12 +49,12 @@
                     <i class="material-icons">menu</i>
                   </a>
                   <ul>
-                    <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
-                    <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+                    <li><a class="btn-floating teal black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                    <li><a class="btn-floating teal lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                    <li><a class="btn-floating teal black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                    <li><a class="btn-floating teal lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                    <li><a class="btn-floating teal black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                    <li><a class="btn-floating teal lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
                   </ul>
                 </div>
         </div>
@@ -69,7 +69,7 @@
             </div>
                 <p>Category:<%= wiki.category %></p>
                 <p> Content:<%= wiki.content %></p>
-                <i class="material-icons yellow lighten-4">grade</i>
+                <i class="material-icons teal lighten-3">grade</i>
                 <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
 
               <!-- <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a> -->
