--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -24,9 +24,10 @@
         </div>
       </form>
     </div>
+  <div class="col s12 m4 l2">
     <div id="left-column">
           <ul id="dropdown1" class="dropdown-content">
-            <li><a href="/wiki/tech/show">tech</a></li>
+            <li><a id="tech-drop-down" href="/wiki/tech/show">tech</a></li>
             <li class="divider"></li>
             <li><a href="/wiki/travel/show">travel</a></li>
             <li class="divider"></li>
@@ -38,28 +39,29 @@
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
     </div>
+  </div>
+
     <div class="col s12 m4 l2">
-      <!-- <h1>PITCH!</h1> -->
         <div id="top-categories">
-          <!-- <p>Top Ideas:</p> -->
             <div class="fixed-action-btn horizontal click-to-toggle">
               <a class="btn-floating btn-large black">
                 <i class="material-icons">menu</i>
               </a>
               <ul>
-                <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                <li><a class="btn-floating teal lighten-3" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
                 <li><a class="btn-floating black" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                <li><a class="btn-floating teal lighten-3" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
                 <li><a class="btn-floating black" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-                <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                <li><a class="btn-floating teal lighten-3" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
                 <li><a class="btn-floating black" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
               </ul>
             </div>
         </div>
     </div>
+
     <div class="col s12 m4 l8">
       <% wiki.forEach(wiki => { %>
-        <div class="card-panel">
+        <div id="show-card-panel" class="card-panel">
         <div class="card-content">
           <p>Title:<%= wiki.title %></p>
         </div>
@@ -68,7 +70,7 @@
         </div>
           <p>Category:<%= wiki.category %></p>
           <p> Content:<%= wiki.content %></p>
-          <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
+          <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons teal lighten-3">mode_edit</i></a>
         </div>
         <% }) %>
       </div>
