--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -18,7 +18,7 @@
     <div class="hide-on-small-only">
       <form>
         <div class="input-field">
-          <input id="search" type="search" required placeholder="search bar">
+          <input id="search" type="search" required>
           <button id="the-search-button"><label id="search-icon" class="label-icon" for="search"><i class="material-icons">search</i></label></button>
           <i id="close-icon" class="material-icons">close</i>
         </div>
