--- a/wiki-project/views/wiki/edit.ejs
+++ b/wiki-project/views/wiki/edit.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper black"><h1 id="title">Edit/Delete</h1></div>
+      <div class="nav-wrapper teal teal darken-3"><h1 id="title">Edit/Delete</h1></div>
     </nav>
     <div class="hide-on-small-only">
     <div>
@@ -36,15 +36,15 @@
         <div id="top-categories">
 
           <div class="fixed-action-btn horizontal click-to-toggle">
-            <a class="btn-floating btn-large black">
+            <a class="btn-floating btn-large teal darken-3">
               <i class="material-icons">menu</i>
             </a>
             <ul>
-              <li><a class="btn-floating black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+              <li><a class="btn-floating teal darken-3" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
               <li><a class="btn-floating teal lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-              <li><a class="btn-floating black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+              <li><a class="btn-floating teal darken-3" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
               <li><a class="btn-floating teal lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-              <li><a class="btn-floating black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+              <li><a class="btn-floating teal darken-3" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
               <li><a class="btn-floating teal lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
             </ul>
           </div>
@@ -69,9 +69,12 @@
                 <div class="input-field col s12">
                     <input id="edit-content-box" type="text" name="wiki[content]" placeholder="edit content"><br><%= wiki.content %>
                </div>
+               <div class="input-field col s12">
+                   <input id="edit-content-box" type="text" name="wiki[date_updated]" placeholder="date/time updated"><br><%= wiki.date_updated %>
+              </div>
             </div>
             <div id="the-edit-button" class="card-action">
-              <button id="submit-edit-button" class="btn teal black" href="wiki">Submit Edit!</button>
+              <button id="submit-edit-button" class="btn teal teal darken-3" href="wiki">Submit Edit!</button>
             </div>
         </div>
       </div>
