--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -14,7 +14,18 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper black"><h1 id="title">Pitch: Idea Board</h1></div>
+      <div class="nav-wrapper indigo darken-4">
+      <!-- <ul class="left hide-on-med-and-down">
+          <li><a class="btn-floating indigo darken-4" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+      </ul> -->
+      <ul class="right hide-on-med-and-down">
+        <li><a class="btn-floating indigo darken-4" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+        <li><a class="btn-floating indigo darken-4" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+        <li><a class="btn-floating indigo darken-4" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+        <li><a class="btn-floating indigo darken-4" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+        <li><a class="btn-floating indigo darken-4" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+      </ul>
+      </div>
     </nav>
     <div class="hide-on-small-only">
       <form action="" id="search-form">
@@ -25,55 +36,57 @@
         </div>
       </form>
     </div>
-    <div id="left-column">
+    <!-- <div id="left-column indigo lighten-4">
           <ul id="dropdown1" class="dropdown-content">
             <li><a href="/wiki/tech/show">tech</a></li>
             <li class="divider"></li>
             <li><a href="/wiki/travel/show">travel</a></li>
             <li class="divider"></li>
             <li><a href="/wiki/style/show">style</a></li>
-            <li class="divider"></li>
+            <li class="divider indigo lighten-4"></li>
             <li><a href="/wiki/food/show">food</a></li>
           </ul>
         <ul class="left hide-on-med-and-down">
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-button indigo" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-    </div>
+    </div> -->
     <!-- <div class="container"> -->
       <div class="row" id="index-box">
         <div class="col s12 m4 l2">
           <!-- <h1>PITCH!</h1> -->
               <!-- <p>Top Ideas:</p> -->
                 <div class="fixed-action-btn horizontal click-to-toggle">
-                  <a class="btn-floating btn-large black">
+                  <a class="btn-floating btn-large indigo darken-4">
                     <i class="material-icons">menu</i>
                   </a>
                   <ul>
-                    <li><a class="btn-floating teal black" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
-                    <li><a class="btn-floating teal lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
-                    <li><a class="btn-floating teal black" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
-                    <li><a class="btn-floating teal lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
-                    <li><a class="btn-floating teal black" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
-                    <li><a class="btn-floating teal lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
+                    <li><a class="btn-floating indigo darken-4" href="/wiki/food/show"><i class="material-icons">receipt</i></a></li>
+                    <li><a class="btn-floating indigo lighten-3" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                    <li><a class="btn-floating indigo darken-4" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                    <li><a class="btn-floating indigo lighten-3" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                    <li><a class="btn-floating indigo darken-4" href="/wiki/new"><i class="material-icons">assignment</i></a></li>
+                    <li><a class="btn-floating indigo lighten-3" href="/wiki"><i class="material-icons">view_quilt</i></a></li>
                   </ul>
                 </div>
         </div>
         <div class="col s12 m4 l8">
           <% wiki.forEach(wiki => { %>
-            <div class="card-panel">
+            <div class="card-panel indigo lighten-5">
             <div class="card-content">
+
                 <p>Title:<%= wiki.title %></p>
             </div>
             <div class="date-created">
-              <p>Created At:<%= wiki.date_created %></p>
+              <% console.log(typeof `${wiki.date_created}`) %>
+              <p>Date Created:<%= `${wiki.date_created}`.slice(0,10) %></p>
             </div>
                 <p>Category:<%= wiki.category %></p>
                 <p> Content:<%= wiki.content %></p>
-                <i class="material-icons teal lighten-3">grade</i>
+                <!-- <p> Date Created:<%= wiki.date_created %></p> -->
+                <!-- <p> Date/Time Updated:<%= wiki.date_updated %></p> -->
+                <i class="material-icons indigo lighten-3">grade</i>
                 <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
-
               <!-- <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a> -->
-
           </div>
           <% }) %>
         </div>
