Restructure project 2 folder

--- a/views/wiki/index.ejs
+++ b/views/wiki/index.ejs
@@ -84,7 +84,7 @@
                 <p>Content:<%= wiki.content %></p>
                 <!-- <p> Date Created:<%= wiki.date_created %></p> -->
                 <!-- <p> Date/Time Updated:<%= wiki.date_updated %></p> -->
-                <i class="material-icons indigo lighten-3">grade</i>
+                <<i class="material-icons indigo lighten-3">grade</i><p><$ wiki.likes %></p>
                 <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a>
               <!-- <a class="white-text" href="/wiki/<%= wiki.id %>/edit"><i class="material-icons">mode_edit</i></a> -->
           </div>
